--- a/layout.css
+++ b/layout.css
@@ -80,3 +80,17 @@ ul{
 	display: grid;
 	
 }
+@media only screen and (max-width: 768px){
+	.projectgrid{
+		grid-template-columns: repeat(auto-fill, minmax(150px,1fr));
+	}
+	img{
+		width: 7rem;
+	}
+	.container{
+		width: 100%;
+	}
+	ul{
+		padding: 0 0 0 10px;
+	}
+}
